fix(unity-bootstrap-theme): fix hero bottom margin on tablets and higher

--- a/packages/unity-bootstrap-theme/src/scss/extends/_heroes.scss
+++ b/packages/unity-bootstrap-theme/src/scss/extends/_heroes.scss
@@ -298,6 +298,7 @@ div.uds-hero-lg {
 @include media-breakpoint-up(md) {
   div[class^="uds-hero"] {
     grid-template-columns: 1fr minmax(0, 700px) 1fr;
+    margin-bottom: 0;
 
     // Column alignment for decendent items
     h1,
